--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
   - docker build -t bhaskarerumalu/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # Take those images and push them to docker hub
+  ## Take those images and push them to docker hub
 
   - docker tag bhaskarerumalu/multi-client:latest mypgdocker/multi-docker:client
   - docker tag bhaskarerumalu/multi-nginx:latest mypgdocker/multi-docker:nginx
